# textual-playground

./: README.md  pyproject.toml
src/textual_playground/: __init__.py  __main__.py  dictionary.py  stopwatch04.tcss
