[project]
name = "textual-playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "naoking158", email = "naoki@bbo.cs.tsukuba.ac.jp" }
]
dependencies = [
    "textual>=0.60.1",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.11,<3.12"

[project.scripts]
"textual-playground" = "textual_playground:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/textual_playground"]


[tool.ruff]
exclude = ["pyproject.toml"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90"]
ignore = ["E203"]
